rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/mail_subscription: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
      - env:
        - name: RABBITMQ_DEFAULT_PASS
          value: guest
        - name: RABBITMQ_DEFAULT_USER
          value: guest
        image: rabbitmq:3-management
        imagePullPolicy: ""
        name: subscription-rabbitmq
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rabbitmq-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbitmq-claim0
        persistentVolumeClaim:
          claimName: rabbitmq-claim0
status: {}
