mail_subscription-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mail_subscription
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/mail_subscription: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mail_subscription: "true"
